adds paper spinner

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -12,3 +12,11 @@ body
   color $black
   margin 0
   padding 0
+	display -webkit-flex
+	display -moz-flex
+	display -ms-flex
+	display -o-flex
+	display flex
+	-ms-flex-direction column
+	-webkit-flex-direction column
+	flex-direction column
